--- a/.github/workflows/appscan.yaml
+++ b/.github/workflows/appscan.yaml
@@ -1,7 +1,10 @@
 name: "HCL AppScan CodeSweep"
 on:
   pull_request:
-    types: [opened,synchronize]
+    types: [opened, synchronize]
+  push:
+    branches:
+      - main
 jobs:
   scan:
     runs-on: ubuntu-latest
